--- a/estilo/style.css
+++ b/estilo/style.css
@@ -7,24 +7,21 @@
     }
 
 html, body {
-    height: 100vh;
     position: relative;
-    background-color: green;
-}
-
-main {
     height: 100vh;
-    position: relative;
-    background-color: green;
+    width: 100vh;
+    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section#telefone {
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 108%;
     
-    height: 627;
+    height: 627px;
     width: 311px;
-    background: url('../imagens/frame-iphone.png');
+    transform: translate(-50%, -50%);
+    background: url(../imagens/frame-iphone.png) no-repeat;
 }
